--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,5 +1,5 @@
 .menu {
-    text-align: right;
+    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,5 +22,11 @@
     h3 {
         font-size: 1.25rem;
         letter-spacing: 1px;
+    }
+}
+
+@media(min-width: 1300px) {
+    .menu {
+        text-align: right;
     }
 }
